--- a/voxns/index.html
+++ b/voxns/index.html
@@ -32,7 +32,7 @@
       <div class="row">
         <div class="col-xl-6 col-lg-7 col-md-9 col-sm-12">
           <img class="cisco-partner" src="img/cisco-partner.png" alt="Cisco Partner" width="120" height="120">
-          <h2 class="mt-2 mb-4">Webex Calling with&nbsp;Vox<br><span>Your complete phone system and collaboration solution in the&nbsp;cloud</span></h2>
+          <h3 class="mt-2 mb-4">Webex Calling with&nbsp;Vox<br><span class="light">Your complete phone system and collaboration solution in the&nbsp;cloud</span></h3>
           <div class="video-container">
             <iframe class="video" src="https://www.youtube-nocookie.com/embed/lalnDTskMfU" allowfullscreen></iframe>
           </div>
@@ -62,22 +62,22 @@
       <div class="row no-gutters">
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-color: #000; background-image: url('img/lifecycle.png');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h3>Deliver a unified experience to your users across all devices and&nbsp;locations</h3>
-          <p class="lead mb-0">Integration of applications in the cloud provides a single, consistent calling and collaboration experience for your workforce, remote and mobile users, partners and customers regardless of the device used and no matter their&nbsp;location.</p>
+          <h4>Deliver a unified experience to your users across all devices and&nbsp;locations</h4>
+          <p class="mb-0">Integration of applications in the cloud provides a single, consistent calling and collaboration experience for your workforce, remote and mobile users, partners and customers regardless of the device used and no matter their&nbsp;location.</p>
         </div>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/showcase2.jpg');"></div>
         <div class="col-lg-6 my-auto showcase-text">
-          <h3>Unlock the collaborative potential of your&nbsp;teams</h3>
-          <p class="lead mb-0">Webex Calling includes Webex Teams and Webex Meetings with features such as file-sharing, white boarding, video and web conferencing. Use these tools on desktops and mobile devices to empower your teams to be more productive, from&nbsp;anywhere.</p>
+          <h4>Unlock the collaborative potential of your&nbsp;teams</h4>
+          <p class="mb-0">Webex Calling includes Webex Teams and Webex Meetings with features such as file-sharing, white boarding, video and web conferencing. Use these tools on desktops and mobile devices to empower your teams to be more productive, from&nbsp;anywhere.</p>
         </div>
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/showcase3.jpg');"></div>
         <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h3>Delight your IT team with easy centralized management</h3>
-          <p class="lead mb-0">All calling and collaboration services are integrated via the cloud, making administration, lifecycle management and security easier through simple web&nbsp;portals.</p>
+          <h4>Delight your IT team with easy centralized management</h4>
+          <p class="mb-0">All calling and collaboration services are integrated via the cloud, making administration, lifecycle management and security easier through simple web&nbsp;portals.</p>
         </div>
       </div>
     </div>
@@ -87,7 +87,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-12 mx-auto">
-          <h2>Let Vox deliver an industry-leading communication and collaboration solution tailored to your enterprise needs, with all the capabilities and benefits of the&nbsp;cloud</h2>
+          <h3 class="heavy">Let Vox deliver an industry-leading communication and collaboration solution tailored to your enterprise needs, with all the capabilities and benefits of the&nbsp;cloud</h3>
         </div>
       </div>
     </div>
@@ -97,16 +97,16 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-12">
-          <h2 class="mb-3"><span>Already have Cisco’s or a Third-Party On-Premise PBX?</span> Vox has you&nbsp;covered</h2>
-          <p class="lead">We can create a plan for you to flexibly deploy and migrate your on-premise PBX to the cloud without any business disruption.</p>
-          <p class="lead">Don’t let finance be a barrier! We can help you leverage your existing Cisco investment to enable your move to the cloud.</p>
-          <p class="lead">Webex Calling connects directly to wider Cisco-based solutions like Cisco Unified Communications Manager (UCM), Cisco UCM Cloud, and Cisco Hosted Collaboration Solution (HCS), as well as to third-party PBX legacy systems.</p>
+          <h3 class="mb-3"><span class="light">Already have Cisco’s or a Third-Party On-Premise PBX?</span> Vox has you&nbsp;covered</h3>
+          <p>We can create a plan for you to flexibly deploy and migrate your on-premise PBX to the cloud without any business disruption.</p>
+          <p>Don’t let finance be a barrier! We can help you leverage your existing Cisco investment to enable your move to the cloud.</p>
+          <p>Webex Calling connects directly to wider Cisco-based solutions like Cisco Unified Communications Manager (UCM), Cisco UCM Cloud, and Cisco Hosted Collaboration Solution (HCS), as well as to third-party PBX legacy systems.</p>
           <p class="mt-5"><button type="submit" class="btn btn-lg btn-warning">Talk to an expert today!</button></p>
         </div>
       </div>
       <div class="row">
         <div class="col-12">
-          <h2 class="hr"><span>Why choose Vox?</span></h2>
+          <h3 class="hr"><span>Why choose Vox?</span></h3>
         </div>
       </div>
       <div class="row">
@@ -130,8 +130,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-12">
-          <h2 class="mb-4">What customers say about&nbsp;us&#8230;</h2>
-          <p class="lead">“Cindy from Vox spent 80+ hours working directly with my team and customers to ensure the Unified Communications team at UCSF continues to provide the level of support our customers have become accustomed to even during the overwhelming COVID-19 surge … Cindy’s contributions during this time of need have been acknowledged as high up as our IT CIO, and she will be included as part of the team for any recognition received in the future. Thank you, thank you, thank you … Vox is lucky to have Cindy on their team!” <b>—Ian Gwinn, UCSF</b></p>
+          <h3 class="light mb-4">What customers say about&nbsp;us&#8230;</h3>
+          <p>“Cindy from Vox spent 80+ hours working directly with my team and customers to ensure the Unified Communications team at UCSF continues to provide the level of support our customers have become accustomed to even during the overwhelming COVID-19 surge … Cindy’s contributions during this time of need have been acknowledged as high up as our IT CIO, and she will be included as part of the team for any recognition received in the future. Thank you, thank you, thank you … Vox is lucky to have Cindy on their team!” —Ian Gwinn, UCSF</p>
           <p class="mt-5"><button type="submit" class="btn btn-lg btn-warning">Talk to an expert today!</button></p>
         </div>
       </div>
