--- a/voxns/index.html
+++ b/voxns/index.html
@@ -30,52 +30,47 @@
   <header class="masthead text-white">
     <div class="container">
       <div class="row">
-        <div class="col-xl-6 col-lg-7 col-md-9 col-sm-12">
-          <img class="cisco-partner" src="img/cisco-partner.png" alt="Cisco Partner" width="120" height="120">
-          <h3 class="mt-2 mb-4">Webex Calling with&nbsp;Vox<br><span class="light">Your complete phone system and collaboration solution in the&nbsp;cloud</span></h3>
+        <div class="col-lg-6 col-md-8 col-sm-10 col-12">
+          <img class="cisco-partner" src="img/cisco-partner.png" alt="Cisco Partner" width="90" height="90">
+          <h3 class="mt-3 mb-0">Webex Calling with&nbsp;Vox</h3>
+          <h3 class="mb-4 light">Your complete phone system and collaboration solution in the&nbsp;cloud</h3>
           <div class="video-container">
             <iframe class="video" src="https://www.youtube-nocookie.com/embed/lalnDTskMfU" allowfullscreen></iframe>
           </div>
-          <!--<p class="lead">Webex Calling is a complete enterprise cloud calling and team collaboration solution that offers: all features of unified communications (UC) including voice, video, and collaboration, easy centralized management, and the high security and reliability standards of a global brand you can&nbsp;trust.</p>
-          <p class="lead">Choosing Webex Calling with Vox lets you migrate your telephony to the cloud at your own&nbsp;pace.</p>-->
         </div>
       </div>
     </div>
   </header>
 
-<!--
-
-  <section class="bg-light text-center" style="padding: 6rem 1rem">
+  <section style="padding: 6rem 1rem 0">
     <div class="container">
       <div class="row">
-        <div class="col-md-8 col-sm-12 mx-auto">
+        <div class="col-12 col-md-9">
           <p class="lead">Webex Calling is a Complete Cloud-based Calling and Collaboration solution that offers all features of unified communications (UC) including voice, video, messaging, and team collaboration on a monthly subscription model. It is easy to manage and powered by Cisco’s high security and reliability&nbsp;standards</p>
         </div>
       </div>
     </div>
   </section>
 
--->
-
   <section class="showcase">
-    <div class="container-fluid p-0">
-      <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-color: #000; background-image: url('img/lifecycle.png');"></div>
-        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 order-md-2 text-white showcase-img" style="background-color: #000; background-image: url('img/lifecycle.png');"></div>
+        <div class="col-md-6 order-md-1 my-auto showcase-text">
           <h4>Deliver a unified experience to your users across all devices and&nbsp;locations</h4>
           <p class="mb-0">Integration of applications in the cloud provides a single, consistent calling and collaboration experience for your workforce, remote and mobile users, partners and customers regardless of the device used and no matter their&nbsp;location.</p>
         </div>
       </div>
-      <div class="row no-gutters">
-        <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/showcase2.jpg');"></div>
-        <div class="col-lg-6 my-auto showcase-text">
+      <div class="row">
+        <div class="col-md-6 text-white showcase-img" style="background-image: url('img/showcase2.jpg');"></div>
+        <div class="col-md-6 my-auto showcase-text">
           <h4>Unlock the collaborative potential of your&nbsp;teams</h4>
           <p class="mb-0">Webex Calling includes Webex Teams and Webex Meetings with features such as file-sharing, white boarding, video and web conferencing. Use these tools on desktops and mobile devices to empower your teams to be more productive, from&nbsp;anywhere.</p>
         </div>
       </div>
-      <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/showcase3.jpg');"></div>
-        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+      <div class="row">
+        <div class="col-md-6 order-md-2 text-white showcase-img" style="background-image: url('img/showcase3.jpg');"></div>
+        <div class="col-md-6 order-md-1 my-auto showcase-text">
           <h4>Delight your IT team with easy centralized management</h4>
           <p class="mb-0">All calling and collaboration services are integrated via the cloud, making administration, lifecycle management and security easier through simple web&nbsp;portals.</p>
         </div>
@@ -93,7 +88,7 @@
     </div>
   </section>
 
-  <section style="padding: 6rem 1rem">
+  <section class="already" style="padding: 6rem 1rem 4rem">
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-12">
@@ -111,16 +106,21 @@
       </div>
       <div class="row">
         <div class="col-lg-4">
-          <h4>Unique Consultative Approach</h4>
-          <p class="mb-0">We use a proprietary consultative framework to find the right technology fit for your unique business needs and desired outcomes</p>
+          <div class="video-container">
+            <iframe class="video" src="https://www.youtube-nocookie.com/embed/MbvtjK7nkW4" allowfullscreen></iframe>
+          </div>
+          <h4 class="mt-3">Unique Consultative Approach</h4>
+          <p class="mb-4">We use a proprietary consultative framework to find the right technology fit for your unique business needs and desired outcomes</p>
         </div>
         <div class="col-lg-4">
-          <h4>Focused on your Business’s Evolution</h4>
-          <p class="mb-0">We ensure that your Webex Calling with Vox investment can expand and adapt as your company grows and changes</p>
+          <img src="img/business.jpg" alt="" style="width:100%">
+          <h4 class="mt-3">Focused on your Business’s Evolution</h4>
+          <p class="mb-4">We ensure that your Webex Calling with Vox investment can expand and adapt as your company grows and changes</p>
         </div>
         <div class="col-lg-4">
-          <h4>Business & Technical Collaboration Expertise</h4>
-          <p class="mb-0">We bring deep collaboration expertise from both business and technical perspectives</p>
+          <img src="img/collab.jpg" alt="" style="width:100%">
+          <h4 class="mt-3">Business & Technical Collaboration Expertise</h4>
+          <p class="mb-4">We bring deep collaboration expertise from both business and technical perspectives</p>
         </div>
       </div>
     </div>
