--- a/voxns/index.html
+++ b/voxns/index.html
@@ -46,7 +46,41 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-9">
-          <p class="lead">Webex Calling is a Complete Cloud-based Calling and Collaboration solution that offers all features of unified communications (UC) including voice, video, messaging, and team collaboration on a monthly subscription model. It is easy to manage and powered by Cisco’s high security and reliability&nbsp;standards</p>
+          <p class="lead mb-0">Webex Calling is a Complete Cloud-based Calling and Collaboration solution that offers all features of unified communications (UC) including voice, video, messaging, and team collaboration on a monthly subscription model. It is easy to manage and powered by Cisco’s high security and reliability&nbsp;standards.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <h3 class="hr"><span>Why choose Webex Calling?</span></h3>
+        </div>
+      </div>
+      <div class="row features-icons">
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-globe m-auto text-primary"></i>
+            </div>
+          </div>
+          <h5 class="mt-3">Industry-Leading Security</h5>
+          <p class="mb-4">Backed by Cisco’s industry-leading security standards, Webex Calling gives you strong encryption, compliance, visibility and control. Inside your own organization, or across company lines, you get a reliable collaboration platform that keeps your data secure.</p>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-globe m-auto text-primary"></i>
+            </div>
+          </div>
+          <h5 class="mt-3">Cost Savings</h5>
+          <p class="mb-4">Moving your phone system to the cloud reduces total cost of ownership (TCO) and capital overlays for updates and capabilities and lowers maintenance and support costs. Simple monthly per-user pricing minimizes capital investment while supporting scalability.</p>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+            <div class="features-icons-icon d-flex">
+              <i class="icon-globe m-auto text-primary"></i>
+            </div>
+          </div>
+          <h5 class="mt-3">Flexible Cloud Migration Paths</h5>
+          <p class="mb-4">With flexible cloud deployment options, you can move your phone system to the cloud all at once or in phases. Webex Calling lets you connect your legacy PBX to the cloud so you can access all the capabilities of cloud while protecting your on-premises investments. </p>
         </div>
       </div>
     </div>
@@ -55,30 +89,30 @@
   <section class="showcase">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 order-md-2 text-white showcase-img" style="background-color: #000; background-image: url('img/lifecycle.png');"></div>
-        <div class="col-md-6 order-md-1 my-auto showcase-text">
-          <h4>Deliver a unified experience to your users across all devices and&nbsp;locations</h4>
+        <div class="col-md-6 text-white showcase-img" style="background-image: url('img/showcase1.jpg');"></div>
+        <div class="col-md-6 my-auto showcase-text">
+          <h5>Deliver a unified experience to your users across all devices and&nbsp;locations</h5>
           <p class="mb-0">Integration of applications in the cloud provides a single, consistent calling and collaboration experience for your workforce, remote and mobile users, partners and customers regardless of the device used and no matter their&nbsp;location.</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 text-white showcase-img" style="background-image: url('img/showcase2.jpg');"></div>
-        <div class="col-md-6 my-auto showcase-text">
-          <h4>Unlock the collaborative potential of your&nbsp;teams</h4>
+        <div class="col-md-6 order-md-2 text-white showcase-img" style="background-image: url('img/showcase2.jpg');background-position:left;"></div>
+        <div class="col-md-6 order-md-1 my-auto showcase-text text-right">
+          <h5>Unlock the collaborative potential of your&nbsp;teams</h5>
           <p class="mb-0">Webex Calling includes Webex Teams and Webex Meetings with features such as file-sharing, white boarding, video and web conferencing. Use these tools on desktops and mobile devices to empower your teams to be more productive, from&nbsp;anywhere.</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 order-md-2 text-white showcase-img" style="background-image: url('img/showcase3.jpg');"></div>
-        <div class="col-md-6 order-md-1 my-auto showcase-text">
-          <h4>Delight your IT team with easy centralized management</h4>
+        <div class="col-md-6 text-white showcase-img" style="background-image: url('img/showcase3.jpg');"></div>
+        <div class="col-md-6 my-auto showcase-text">
+          <h5>Delight your IT team with easy centralized management</h5>
           <p class="mb-0">All calling and collaboration services are integrated via the cloud, making administration, lifecycle management and security easier through simple web&nbsp;portals.</p>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="bg-blue text-white text-center" style="background: #343a40 url('img/skyline.jpg') no-repeat center center; background-size: cover; padding: 6rem 1rem">
+  <section class="bg-blue text-white text-center" style="background: #0096bb url('img/skyline.jpg') no-repeat center center; background-size: cover; padding: 6rem 1rem">
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-12 mx-auto">
@@ -109,24 +143,24 @@
           <div class="video-container">
             <iframe class="video" src="https://www.youtube-nocookie.com/embed/MbvtjK7nkW4" allowfullscreen></iframe>
           </div>
-          <h4 class="mt-3">Unique Consultative Approach</h4>
-          <p class="mb-4">We use a proprietary consultative framework to find the right technology fit for your unique business needs and desired outcomes</p>
+          <h5 class="mt-3">Unique Consultative Approach</h5>
+          <p class="mb-4">We use a proprietary consultative framework to find the right technology fit for your unique business needs and desired outcomes.</p>
         </div>
         <div class="col-lg-4">
           <img src="img/business.jpg" alt="" style="width:100%">
-          <h4 class="mt-3">Focused on your Business’s Evolution</h4>
-          <p class="mb-4">We ensure that your Webex Calling with Vox investment can expand and adapt as your company grows and changes</p>
+          <h5 class="mt-3">Focused on your Business’s Evolution</h5>
+          <p class="mb-4">We ensure that your Webex Calling with Vox investment can expand and adapt as your company grows and changes.</p>
         </div>
         <div class="col-lg-4">
           <img src="img/collab.jpg" alt="" style="width:100%">
-          <h4 class="mt-3">Business & Technical Collaboration Expertise</h4>
-          <p class="mb-4">We bring deep collaboration expertise from both business and technical perspectives</p>
+          <h5 class="mt-3">Business &amp; Technical Collaboration Expertise</h5>
+          <p class="mb-4">We bring deep collaboration expertise from both business and technical perspectives.</p>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="bg-blue text-white" style="padding: 6rem 1rem">
+  <section class="testimonial text-white" style="padding: 6rem 1rem">
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-12">
