--- a/voxns/index.html
+++ b/voxns/index.html
@@ -56,27 +56,27 @@
       </div>
       <div class="row features-icons">
         <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="icon-globe m-auto text-primary"></i>
+          <div class="features-icons-item mx-auto">
+            <div class="features-icons-icon d-flex" style="background:#EABC00">
+              <i class="fas fa-shield-alt m-auto"></i>
             </div>
           </div>
           <h5 class="mt-3">Industry-Leading Security</h5>
           <p class="mb-4">Backed by Cisco’s industry-leading security standards, Webex Calling gives you strong encryption, compliance, visibility and control. Inside your own organization, or across company lines, you get a reliable collaboration platform that keeps your data secure.</p>
         </div>
         <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="icon-globe m-auto text-primary"></i>
+          <div class="features-icons-item mx-auto">
+            <div class="features-icons-icon d-flex" style="background:#00EABC">
+              <i class="fas fa-hand-holding-usd m-auto"></i>
             </div>
           </div>
           <h5 class="mt-3">Cost Savings</h5>
           <p class="mb-4">Moving your phone system to the cloud reduces total cost of ownership (TCO) and capital overlays for updates and capabilities and lowers maintenance and support costs. Simple monthly per-user pricing minimizes capital investment while supporting scalability.</p>
         </div>
         <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+          <div class="features-icons-item mx-auto">
             <div class="features-icons-icon d-flex">
-              <i class="icon-globe m-auto text-primary"></i>
+              <i class="fas fa-cloud-upload-alt m-auto"></i>
             </div>
           </div>
           <h5 class="mt-3">Flexible Cloud Migration Paths</h5>
@@ -121,6 +121,7 @@
       </div>
     </div>
   </section>
+
 
   <section class="already" style="padding: 6rem 1rem 4rem">
     <div class="container">
