--- a/voxns/index.html
+++ b/voxns/index.html
@@ -46,7 +46,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-9">
-          <p class="lead mb-0">Webex Calling is a Complete Cloud-based Calling and Collaboration solution that offers all features of unified communications (UC) including voice, video, messaging, and team collaboration on a monthly subscription model. It is easy to manage and powered by Cisco’s high security and reliability&nbsp;standards.</p>
+          <p class="lead mb-0">Webex Calling is a Complete Cloud-based Calling and Collaboration solution that offers all features of unified communications (UC) including voice, video, messaging, meetings, and team collaboration on a monthly subscription model. It is easy to centrally manage and powered by Cisco’s high security and reliability&nbsp;standards.</p>
         </div>
       </div>
       <div class="row">
@@ -71,7 +71,7 @@
             </div>
           </div>
           <h5 class="mt-3">Cost Savings</h5>
-          <p class="mb-4">Moving your phone system to the cloud reduces total cost of ownership (TCO) and capital overlays for updates and capabilities and lowers maintenance and support costs. Simple monthly per-user pricing minimizes capital investment while supporting scalability.</p>
+          <p class="mb-4">Moving your phone system to the cloud reduces total cost of ownership (TCO) and capital overlays for updates and capabilities and lowers maintenance and support costs. Simple monthly per-user licensing minimizes capital investment while supporting scalability.</p>
         </div>
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto">
@@ -91,7 +91,7 @@
       <div class="row">
         <div class="col-md-6 text-white showcase-img" style="background-image: url('img/showcase1.jpg');"></div>
         <div class="col-md-6 my-auto showcase-text">
-          <h5>Deliver a unified experience to your users across all devices and&nbsp;locations</h5>
+          <h5>Deliver One Unified User Experience Across All Devices and&nbsp;Locations</h5>
           <p class="mb-0">Integration of applications in the cloud provides a single, consistent calling and collaboration experience for your workforce, remote and mobile users, partners and customers regardless of the device used and no matter their&nbsp;location.</p>
         </div>
       </div>
