--- a/voxns/index.html
+++ b/voxns/index.html
@@ -127,10 +127,10 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-12">
-          <h3 class="mb-3"><span class="light">Already have Cisco’s or a Third-Party On-Premise PBX?</span> Vox has you&nbsp;covered</h3>
+          <h3 class="mb-3"><span class="light">Already have a Cisco or Third-Party On-Premise PBX?</span> Vox has you&nbsp;covered</h3>
           <p>We can create a plan for you to flexibly deploy and migrate your on-premise PBX to the cloud without any business disruption.</p>
           <p>Don’t let finance be a barrier! We can help you leverage your existing Cisco investment to enable your move to the cloud.</p>
-          <p>Webex Calling connects directly to wider Cisco-based solutions like Cisco Unified Communications Manager (UCM), Cisco UCM Cloud, and Cisco Hosted Collaboration Solution (HCS), as well as to third-party PBX legacy systems.</p>
+          <p>Webex Calling connects directly to wider Cisco-based solutions like Cisco Unified Communications Manager (UCM), Cisco UCM Cloud, and Cisco Hosted Collaboration Solution (HCS), and to third-party PBXs.</p>
           <p class="mt-5"><button type="submit" class="btn btn-lg btn-warning">Talk to an expert today!</button></p>
         </div>
       </div>
@@ -167,7 +167,7 @@
         <div class="col-md-8 col-sm-12">
           <h3 class="light mb-4">What customers say about&nbsp;us&#8230;</h3>
           <p>“Cindy from Vox spent 80+ hours working directly with my team and customers to ensure the Unified Communications team at UCSF continues to provide the level of support our customers have become accustomed to even during the overwhelming COVID-19 surge … Cindy’s contributions during this time of need have been acknowledged as high up as our IT CIO, and she will be included as part of the team for any recognition received in the future. Thank you, thank you, thank you … Vox is lucky to have Cindy on their team!” —Ian Gwinn, UCSF</p>
-          <p class="mt-5"><button type="submit" class="btn btn-lg btn-warning">Talk to an expert today!</button></p>
+          <p class="mt-5"><button type="submit" class="btn btn-lg btn-warning">Talk to a Vox Expert Today!</button></p>
         </div>
       </div>
     </div>
