--- a/voxns/index.html
+++ b/voxns/index.html
@@ -33,7 +33,7 @@
         <div class="col-lg-6 col-md-8 col-sm-10 col-12">
           <img class="cisco-partner" src="img/cisco-partner.png" alt="Cisco Partner" width="90" height="90">
           <h3 class="mt-3 mb-0">Webex Calling with&nbsp;Vox</h3>
-          <h3 class="mb-4 light">Your complete phone system and collaboration solution in the&nbsp;cloud</h3>
+          <p class="lead">Your complete phone system and collaboration solution in the&nbsp;cloud</p>
           <div class="video-container">
             <iframe class="video" src="https://www.youtube-nocookie.com/embed/lalnDTskMfU" allowfullscreen></iframe>
           </div>
@@ -149,7 +149,7 @@
         </div>
         <div class="col-lg-4">
           <img src="img/business.jpg" alt="" style="width:100%">
-          <h5 class="mt-3">Focused on your Business’s Evolution</h5>
+          <h5 class="mt-3">Focused on Your Business’s Evolution</h5>
           <p class="mb-4">We ensure that your Webex Calling with Vox investment can expand and adapt as your company grows and changes.</p>
         </div>
         <div class="col-lg-4">
