--- a/voxns/index.html
+++ b/voxns/index.html
@@ -46,7 +46,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-9">
-          <p class="lead mb-0">Webex Calling is a Complete Cloud-based Calling and Collaboration solution that offers all features of unified communications (UC) including voice, video, messaging, meetings, and team collaboration on a monthly subscription model. It is easy to centrally manage and powered by Cisco’s high security and reliability&nbsp;standards.</p>
+          <p class="mb-0">Webex Calling is a Complete Cloud-based Calling and Collaboration solution that offers all features of unified communications (UC) including voice, video, messaging, meetings, and team collaboration on a monthly subscription model. It is easy to centrally manage and powered by Cisco’s high security and reliability&nbsp;standards.</p>
         </div>
       </div>
       <div class="row">
