--- a/voxns/index.html
+++ b/voxns/index.html
@@ -49,45 +49,16 @@
           <p class="mb-0">Webex Calling is a Complete Cloud-based Calling and Collaboration solution that offers all features of unified communications (UC) including voice, video, messaging, meetings, and team collaboration on a monthly subscription model. It is easy to centrally manage and powered by Cisco’s high security and reliability&nbsp;standards.</p>
         </div>
       </div>
-      <div class="row">
-        <div class="col-12">
-          <h3 class="hr"><span>Why choose Webex Calling?</span></h3>
-        </div>
-      </div>
-      <div class="row features-icons">
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto">
-            <div class="features-icons-icon d-flex" style="background:#EABC00">
-              <i class="fas fa-shield-alt m-auto"></i>
-            </div>
-          </div>
-          <h5 class="mt-3">Industry-Leading Security</h5>
-          <p class="mb-4">Backed by Cisco’s industry-leading security standards, Webex Calling gives you strong encryption, compliance, visibility and control. Inside your own organization, or across company lines, you get a reliable collaboration platform that keeps your data secure.</p>
-        </div>
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto">
-            <div class="features-icons-icon d-flex" style="background:#00EABC">
-              <i class="fas fa-hand-holding-usd m-auto"></i>
-            </div>
-          </div>
-          <h5 class="mt-3">Cost Savings</h5>
-          <p class="mb-4">Moving your phone system to the cloud reduces total cost of ownership (TCO) and capital overlays for updates and capabilities and lowers maintenance and support costs. Simple monthly per-user licensing minimizes capital investment while supporting scalability.</p>
-        </div>
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto">
-            <div class="features-icons-icon d-flex">
-              <i class="fas fa-cloud-upload-alt m-auto"></i>
-            </div>
-          </div>
-          <h5 class="mt-3">Flexible Cloud Migration Paths</h5>
-          <p class="mb-4">With flexible cloud deployment options, you can move your phone system to the cloud all at once or in phases. Webex Calling lets you connect your legacy PBX to the cloud so you can access all the capabilities of cloud while protecting your on-premises investments. </p>
-        </div>
-      </div>
     </div>
   </section>
 
   <section class="showcase">
     <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h3 class="hr"><span>Why choose Webex Calling?</span></h3>
+        </div>
+      </div>
       <div class="row">
         <div class="col-md-6 text-white showcase-img" style="background-image: url('img/showcase1.jpg');"></div>
         <div class="col-md-6 my-auto showcase-text">
@@ -107,6 +78,44 @@
         <div class="col-md-6 my-auto showcase-text">
           <h5>Delight your IT team with easy centralized management</h5>
           <p class="mb-0">All calling and collaboration services are integrated via the cloud, making administration, lifecycle management and security easier through simple web&nbsp;portals.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section style="padding: 0rem 1rem 0rem">
+    <div class="container">
+      <div class="row features-icons">
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto">
+            <div class="features-icons-icon d-flex">
+              <i class="fas fa-shield-alt m-auto"></i>
+            </div>
+          </div>
+          <h5 class="mt-3">Industry-Leading Security</h5>
+          <p class="mb-4">Backed by Cisco’s industry-leading security standards, Webex Calling gives you strong encryption, compliance, visibility and control. Inside your own organization, or across company lines, you get a reliable collaboration platform that keeps your data secure.</p>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto">
+            <div class="features-icons-icon d-flex">
+              <i class="fas fa-hand-holding-usd m-auto"></i>
+            </div>
+          </div>
+          <h5 class="mt-3">Cost Savings</h5>
+          <p class="mb-4">Moving your phone system to the cloud reduces total cost of ownership (TCO) and capital overlays for updates and capabilities and lowers maintenance and support costs. Simple monthly per-user licensing minimizes capital investment while supporting scalability.</p>
+        </div>
+        <div class="col-lg-4">
+          <div class="features-icons-item mx-auto">
+            <div class="features-icons-icon d-flex">
+              <i class="fas fa-cloud-upload-alt m-auto"></i>
+            </div>
+          </div>
+          <h5 class="mt-3">Flexible Cloud Migration Paths</h5>
+          <p class="mb-4">With flexible cloud deployment options, you can move your phone system to the cloud all at once or in phases. Webex Calling lets you connect your legacy PBX to the cloud so you can access all the capabilities of cloud while protecting your on-premises investments. </p>
+        </div>
+      </div>
+      <div class="row">
+          <p class="mt-5 mx-auto"><button type="submit" class="btn btn-lg btn-warning">Talk to a Vox Expert Today!</button></p>
         </div>
       </div>
     </div>
