--- a/voxns/index.html
+++ b/voxns/index.html
@@ -60,23 +60,23 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 text-white showcase-img" style="background-image: url('img/showcase1.jpg');"></div>
+        <div class="col-md-6 text-white showcase-img" style="background-image: url('img/showcase0.jpg')"></div>
         <div class="col-md-6 my-auto showcase-text">
           <h5>Deliver One Unified User Experience Across All Devices and&nbsp;Locations</h5>
           <p class="mb-0">Integration of applications in the cloud provides a single, consistent calling and collaboration experience for your workforce, remote and mobile users, partners and customers regardless of the device used and no matter their&nbsp;location.</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 order-md-2 text-white showcase-img" style="background-image: url('img/showcase2.jpg');background-position:left;"></div>
+        <div class="col-md-6 order-md-2 text-white showcase-img" style="background-image: url('img/showcase2.jpg')"></div>
         <div class="col-md-6 order-md-1 my-auto showcase-text text-right">
-          <h5>Unlock the collaborative potential of your&nbsp;teams</h5>
+          <h5>Unlock the Collaborative Potential of Your&nbsp;Teams</h5>
           <p class="mb-0">Webex Calling includes Webex Teams and Webex Meetings with features such as file-sharing, white boarding, video and web conferencing. Use these tools on desktops and mobile devices to empower your teams to be more productive, from&nbsp;anywhere.</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 text-white showcase-img" style="background-image: url('img/showcase3.jpg');"></div>
+        <div class="col-md-6 text-white showcase-img" style="background-image: url('img/showcase3.jpg')"></div>
         <div class="col-md-6 my-auto showcase-text">
-          <h5>Delight your IT team with easy centralized management</h5>
+          <h5>Delight Your IT Team with Easy Centralized Management</h5>
           <p class="mb-0">All calling and collaboration services are integrated via the cloud, making administration, lifecycle management and security easier through simple web&nbsp;portals.</p>
         </div>
       </div>
@@ -142,9 +142,7 @@
           <p>Webex Calling connects directly to wider Cisco-based solutions like Cisco Unified Communications Manager (UCM), Cisco UCM Cloud, and Cisco Hosted Collaboration Solution (HCS), and to third-party PBXs.</p>
           <p class="mt-5"><button type="submit" class="btn btn-lg btn-warning">Talk to a Vox Expert Today!</button></p>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-12">
+        <div class="mt-5 col-12">
           <h3 class="hr"><span>Why choose Vox?</span></h3>
         </div>
       </div>
