--- a/voxns/index.html
+++ b/voxns/index.html
@@ -115,7 +115,7 @@
         </div>
       </div>
       <div class="row">
-          <p class="mt-5 mx-auto"><button type="submit" class="btn btn-lg btn-warning">Talk to a Vox Expert Today!</button></p>
+          <p class="mt-4 mb-0 mx-auto"><button type="submit" class="btn btn-lg btn-warning">Talk to a Vox Expert Today!</button></p>
         </div>
       </div>
     </div>
@@ -131,8 +131,7 @@
     </div>
   </section>
 
-
-  <section class="already" style="padding: 6rem 1rem 4rem">
+  <section class="already" style="padding: 6rem 1rem 5rem">
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-12">
@@ -140,9 +139,9 @@
           <p>We can create a plan for you to flexibly deploy and migrate your on-premise PBX to the cloud without any business disruption.</p>
           <p>Don’t let finance be a barrier! We can help you leverage your existing Cisco investment to enable your move to the cloud.</p>
           <p>Webex Calling connects directly to wider Cisco-based solutions like Cisco Unified Communications Manager (UCM), Cisco UCM Cloud, and Cisco Hosted Collaboration Solution (HCS), and to third-party PBXs.</p>
-          <p class="mt-5"><button type="submit" class="btn btn-lg btn-warning">Talk to a Vox Expert Today!</button></p>
+          <p class="mt-5 mb-5"><button type="submit" class="btn btn-lg btn-warning">Talk to a Vox Expert Today!</button></p>
         </div>
-        <div class="mt-5 col-12">
+        <div class="mt-4 col-12 mb-3">
           <h3 class="hr"><span>Why choose Vox?</span></h3>
         </div>
       </div>
@@ -180,48 +179,10 @@
     </div>
   </section>
 
-<!--
-  <section class="call-to-action text-white text-center">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-sm-12 mx-auto">
-          <h2 class="mb-4">Let Vox deliver the right cloud calling and collaboration platform tailored to your business&nbsp;needs</h2>
-          <form>
-            <div class="form-row">
-              <div class="col-12">
-                <button type="submit" class="btn btn-block btn-lg btn-light">Talk to an expert today!</button>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </section>
--->
-
   <footer class="footer">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
-          <!--
-          <ul class="list-inline mb-2">
-            <li class="list-inline-item">
-              <a href="#">About</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Contact</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Terms of Use</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="#">Privacy Policy</a>
-            </li>
-          </ul>
-          -->
           <p class="text-muted small mb-4 mb-lg-0">&copy; 2020 VOX Network Solutions. All rights reserved.</p>
         </div>
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
