--- a/voxns/index.html
+++ b/voxns/index.html
@@ -56,7 +56,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h3 class="hr"><span>Why choose Webex Calling?</span></h3>
+          <h3 class="hr"><span>Why choose Webex&nbsp;Calling?</span></h3>
         </div>
       </div>
       <div class="row">
