--- a/voxns/index.html
+++ b/voxns/index.html
@@ -32,8 +32,7 @@
       <div class="row">
         <div class="col-lg-6 col-md-8 col-sm-10 col-12">
           <img class="cisco-partner" src="img/cisco-partner.png" alt="Cisco Partner" width="90" height="90">
-          <h3 class="mt-3 mb-0">Webex Calling with&nbsp;Vox</h3>
-          <h3 class="light mb-4">Your complete phone system and collaboration solution in the&nbsp;cloud</h3>
+          <h2 class="mt-3 mb-4">Webex Calling with&nbsp;Vox</h2>
           <div class="video-container">
             <iframe class="video" src="https://www.youtube-nocookie.com/embed/lalnDTskMfU" allowfullscreen></iframe>
           </div>
@@ -46,7 +45,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-9">
-          <p class="mb-0">Webex Calling is a Complete Cloud-based Calling and Collaboration solution that offers all features of unified communications (UC) including voice, video, messaging, meetings, and team collaboration on a monthly subscription model. It is easy to centrally manage and powered by Cisco’s high security and reliability&nbsp;standards.</p>
+          <p class="mb-0">Webex Calling is a Comprehensive Cloud-based Phone and Collaboration solution that offers all features of unified communications (UC) including voice, video, chat, meetings, and team collaboration on a monthly subscription model. Easy to manage and powered by Cisco, Webex Calling is your industry-leading secure collaboration platform in the&nbsp;cloud.</p>
         </div>
       </div>
     </div>
@@ -56,14 +55,14 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h3 class="hr"><span>Why choose Webex Calling?</span></h3>
+          <h3 class="hr"><span>Why Choose Webex&nbsp;Calling</span></h3>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 text-white showcase-img" style="background-image: url('img/showcase0.jpg')"></div>
         <div class="col-md-6 my-auto showcase-text">
-          <h5>Deliver One Unified User Experience Across All Devices and&nbsp;Locations</h5>
-          <p class="mb-0">Integration of applications in the cloud provides a single, consistent calling and collaboration experience for your workforce, remote and mobile users, partners and customers regardless of the device used and no matter their&nbsp;location.</p>
+          <h5>Deliver a Unified User Experience Across All Devices and&nbsp;Locations</h5>
+          <p class="mb-0">Integration of applications in the cloud provides a single, consistent calling and collaboration experience for your workforce, remote and mobile users, partners and customers regardless of where they are located and what device they are&nbsp;using.</p>
         </div>
       </div>
       <div class="row">
@@ -77,7 +76,7 @@
         <div class="col-md-6 text-white showcase-img" style="background-image: url('img/showcase3.jpg')"></div>
         <div class="col-md-6 my-auto showcase-text">
           <h5>Delight Your IT Team with Easy Centralized Management</h5>
-          <p class="mb-0">All calling and collaboration services are integrated via the cloud, making administration, lifecycle management and security easier through simple web&nbsp;portals.</p>
+          <p class="mb-0">All calling and collaboration services are integrated in the cloud, making administration, lifecycle management and security easier through simple web&nbsp;portals.</p>
         </div>
       </div>
     </div>
@@ -93,7 +92,7 @@
             </div>
           </div>
           <h5 class="mt-3">Industry-Leading Security</h5>
-          <p class="mb-4">Backed by Cisco’s industry-leading security standards, Webex Calling gives you strong encryption, compliance, visibility and control. Inside your own organization, or across company lines, you get a reliable collaboration platform that keeps your data secure.</p>
+          <p class="mb-4">Backed by Cisco’s industry-leading security standards, Webex Calling gives you strong encryption, compliance, visibility and control. Whether inside your own organization, or across company lines, you get a reliable collaboration platform that keeps your data secure.</p>
         </div>
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto">
@@ -101,7 +100,7 @@
               <i class="fas fa-hand-holding-usd m-auto"></i>
             </div>
           </div>
-          <h5 class="mt-3">Cost Savings</h5>
+          <h5 class="mt-3">Cost Effective</h5>
           <p class="mb-4">Moving your phone system to the cloud reduces total cost of ownership (TCO) and capital overlays for updates and capabilities and lowers maintenance and support costs. Simple monthly per-user licensing minimizes capital investment while supporting scalability.</p>
         </div>
         <div class="col-lg-4">
@@ -111,7 +110,7 @@
             </div>
           </div>
           <h5 class="mt-3">Flexible Cloud Migration Paths</h5>
-          <p class="mb-4">With flexible cloud deployment options, you can move your phone system to the cloud all at once or in phases. Webex Calling lets you connect your legacy PBX to the cloud so you can access all the capabilities of cloud while protecting your on-premises investments. </p>
+          <p class="mb-4">With flexible cloud deployment options, you can move your phone system to the cloud all at once or in phases. Webex Calling lets you connect your legacy PBX to the cloud so you can access all the capabilities of the cloud while protecting your on-premises investments. </p>
         </div>
       </div>
       <div class="row">
@@ -135,14 +134,14 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-12">
-          <h3 class="mb-3"><span class="light">Already have a Cisco or Third-Party On-Premise PBX?</span> Vox has you&nbsp;covered</h3>
+          <h3 class="mb-3"><span class="light">Already got a Cisco or Third-Party On-Premise PBX?</span> Vox has you&nbsp;covered</h3>
           <p>We can create a plan for you to flexibly deploy and migrate your on-premise PBX to the cloud without any business disruption.</p>
           <p>Don’t let finance be a barrier! We can help you leverage your existing Cisco investment to enable your move to the cloud.</p>
-          <p>Webex Calling connects directly to wider Cisco-based solutions like Cisco Unified Communications Manager (UCM), Cisco UCM Cloud, and Cisco Hosted Collaboration Solution (HCS), and to third-party PBXs.</p>
+          <p>Webex Calling connects directly to broader Cisco-based solutions like Cisco Unified Communications Manager (UCM), Cisco UCM Cloud, and Cisco Hosted Collaboration Solution (HCS), and to third-party PBXs.</p>
           <p class="mt-5 mb-5"><button type="submit" class="btn btn-lg btn-warning">Talk to a Vox Expert Today!</button></p>
         </div>
         <div class="mt-4 col-12 mb-3">
-          <h3 class="hr"><span>Why choose Vox?</span></h3>
+          <h3 class="hr"><span>Why Choose Vox</span></h3>
         </div>
       </div>
       <div class="row">
@@ -151,17 +150,17 @@
             <iframe class="video" src="https://www.youtube-nocookie.com/embed/MbvtjK7nkW4" allowfullscreen></iframe>
           </div>
           <h5 class="mt-3">Unique Consultative Approach</h5>
-          <p class="mb-4">We use a proprietary consultative framework to find the right technology fit for your unique business needs and desired outcomes.</p>
+          <p class="mb-4">We use our proprietary Vox Lifecycle consultative framework to find the right technology fit for your unique business needs and desired outcomes.</p>
         </div>
         <div class="col-lg-4">
           <img src="img/business.jpg" alt="" style="width:100%">
           <h5 class="mt-3">Focused on Your Business’s Evolution</h5>
-          <p class="mb-4">We ensure that your Webex Calling with Vox investment can expand and adapt as your company grows and changes.</p>
+          <p class="mb-4">We ensure that your Webex Calling investment can expand and adapt as your company grows and changes.</p>
         </div>
         <div class="col-lg-4">
           <img src="img/collab.jpg" alt="" style="width:100%">
           <h5 class="mt-3">Business &amp; Technical Collaboration Expertise</h5>
-          <p class="mb-4">We bring deep collaboration expertise from both business and technical perspectives.</p>
+          <p class="mb-4">We bring deep unified communications and collaboration expertise to the table, from both business and technical perspectives.</p>
         </div>
       </div>
     </div>
@@ -171,7 +170,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-12">
-          <h3 class="light mb-4">What customers say about&nbsp;us&#8230;</h3>
+          <h3 class="light mb-4">What Our Customers Say About&nbsp;Us</h3>
           <p>“Cindy from Vox spent 80+ hours working directly with my team and customers to ensure the Unified Communications team at UCSF continues to provide the level of support our customers have become accustomed to even during the overwhelming COVID-19 surge … Cindy’s contributions during this time of need have been acknowledged as high up as our IT CIO, and she will be included as part of the team for any recognition received in the future. Thank you, thank you, thank you … Vox is lucky to have Cindy on their team!” —Ian Gwinn, UCSF</p>
           <p class="mt-5"><button type="submit" class="btn btn-lg btn-warning">Talk to a Vox Expert Today!</button></p>
         </div>
