--- a/voxns/index.html
+++ b/voxns/index.html
@@ -62,7 +62,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h3 class="hr"><span>Why Choose Webex&nbsp;Calling</span></h3>
+          <!-- <h3 class="mb-4"><span>Why Choose Webex&nbsp;Calling</span></h3> -->
         </div>
       </div>
       <div class="row">
@@ -140,7 +140,7 @@
   <section class="already" style="padding: 6rem 1rem 5rem">
     <div class="container">
       <div class="row">
-        <div class="col-md-8 col-sm-12">
+        <div class="col-lg-7 col-md-8 col-sm-12">
           <h3 class="mb-3"><span class="light">Already got a Cisco or Third-Party On-Premise PBX?</span> Vox has you&nbsp;covered</h3>
           <p>We can create a plan for you to flexibly deploy and migrate your on-premise PBX to the cloud without any business disruption.</p>
           <p>Don’t let finance be a barrier! We can help you leverage your existing Cisco investment to enable your move to the cloud.</p>
