--- a/voxns/index.html
+++ b/voxns/index.html
@@ -29,7 +29,7 @@
         <a class="social" href="https://twitter.com/voxns"><i class="fab fa-twitter fa-fw"></i></a>
         <a class="social" href="https://www.linkedin.com/company/vox-network-solutions"><i class="fab fa-linkedin fa-fw"></i></a>
       -->
-        <a class="btn btn-warning call" href="tel:877-869-8111"><i class="fas fa-phone-alt"></i> 877.869.8111</a>
+        <a class="btn btn-warning call" href="tel:877-869-8111"><i class="fas fa-phone-alt"></i>&nbsp;&nbsp;877.869.8111</a>
       </div>
     </div>
   </nav>
@@ -148,7 +148,7 @@
           <p class="mt-5 mb-5"><button type="submit" class="btn btn-warning">Talk to a Vox Expert Today!</button></p>
         </div>
         <div class="mt-4 col-12 mb-3">
-          <h3 class="hr"><span>Why Choose Vox</span></h3>
+          <h3 class="hr"><span>Why Choose Vox?</span></h3>
         </div>
       </div>
       <div class="row">
