--- a/voxns/index.html
+++ b/voxns/index.html
@@ -155,7 +155,7 @@
         <div class="col-lg-4">
           <div class="video-container">
             <a class="video-overlay" href="#"></a>
-            <iframe class="video" src="https://www.youtube-nocookie.com/embed/MbvtjK7nkW4?showinfo=0" allowfullscreen></iframe>
+            <iframe class="video" src="https://www.youtube-nocookie.com/embed/MbvtjK7nkW4" allow="autoplay" allowfullscreen></iframe>
           </div>
           <h5 class="mt-3">Unique Consultative Approach</h5>
           <p class="mb-4">We use our proprietary Vox Lifecycle consultative framework to find the right technology fit for your unique business needs and desired outcomes.</p>
@@ -225,7 +225,7 @@ event.preventDefault();
 $(this).fadeOut();
 var iframe = $(this).next('iframe'),
 iframe_src = $(iframe).attr('src');
-$(iframe).attr('src', iframe_src + '&autoplay=1');
+$(iframe).attr('src', iframe_src + '?autoplay=1');
 });
 });
 })(jQuery);
