--- a/voxns/index.html
+++ b/voxns/index.html
@@ -41,7 +41,7 @@
           <img class="cisco-partner" src="img/cisco-partner.png" alt="Cisco Partner" width="90" height="90">
           <h2 class="mt-3 mb-4">Webex Calling with&nbsp;Vox</h2>
           <div class="video-container">
-            <iframe class="video" src="https://www.youtube-nocookie.com/embed/lalnDTskMfU" allowfullscreen></iframe>
+            <iframe class="video" src="https://www.youtube.com/embed/lalnDTskMfU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
       </div>
@@ -155,7 +155,7 @@
         <div class="col-lg-4">
           <div class="video-container">
             <a class="video-overlay" href="#"></a>
-            <iframe class="video" src="https://www.youtube-nocookie.com/embed/MbvtjK7nkW4" allow="autoplay" allowfullscreen></iframe>
+            <iframe class="video" src="https://www.youtube.com/embed/MbvtjK7nkW4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <h5 class="mt-3">Unique Consultative Approach</h5>
           <p class="mb-4">We use our proprietary Vox Lifecycle consultative framework to find the right technology fit for your unique business needs and desired outcomes.</p>
