--- a/voxns/index.html
+++ b/voxns/index.html
@@ -39,7 +39,7 @@
       <div class="row">
         <div class="col-lg-6 col-md-8 col-sm-10 col-12">
           <img class="cisco-partner" src="img/cisco-partner.png" alt="Cisco Partner" width="90" height="90">
-          <h2 class="mt-3 mb-4">Webex Calling with&nbsp;Vox</h2>
+          <h2 class="mt-3 mb-4">Webex Calling with&nbsp;VOX</h2>
           <div class="video-container">
             <iframe class="video" src="https://www.youtube.com/embed/lalnDTskMfU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
@@ -121,7 +121,7 @@
         </div>
       </div>
       <div class="row">
-          <p class="mt-4 mb-0 mx-auto"><button type="submit" class="btn btn-warning">Talk to a Vox Expert Today!</button></p>
+          <p class="mt-4 mb-0 mx-auto"><button type="submit" class="btn btn-warning">Talk to a VOX Expert Today!</button></p>
         </div>
       </div>
     </div>
@@ -131,7 +131,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-12 mx-auto">
-          <h3 class="light">Let Vox deliver an industry-leading communication and collaboration solution tailored to your enterprise needs, with all the capabilities and benefits of the&nbsp;cloud</h3>
+          <h3 class="light">Let VOX deliver an industry-leading communication and collaboration solution tailored to your enterprise needs, with all the capabilities and benefits of the&nbsp;cloud</h3>
         </div>
       </div>
     </div>
@@ -141,14 +141,14 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-7 col-md-8 col-sm-12">
-          <h3 class="mb-3"><span class="light">Already got a Cisco or Third-Party On-Premise PBX?</span> Vox has you&nbsp;covered</h3>
+          <h3 class="mb-3"><span class="light">Already got a Cisco or Third-Party On-Premise PBX?</span> VOX has you&nbsp;covered</h3>
           <p>We can create a plan for you to flexibly deploy and migrate your on-premise PBX to the cloud without any business disruption.</p>
           <p>Don’t let finance be a barrier! We can help you leverage your existing Cisco investment to enable your move to the cloud.</p>
           <p>Webex Calling connects directly to broader Cisco-based solutions like Cisco Unified Communications Manager (UCM), Cisco UCM Cloud, and Cisco Hosted Collaboration Solution (HCS), and to third-party PBXs.</p>
-          <p class="mt-5 mb-5"><button type="submit" class="btn btn-warning">Talk to a Vox Expert Today!</button></p>
+          <p class="mt-5 mb-5"><button type="submit" class="btn btn-warning">Talk to a VOX Expert Today!</button></p>
         </div>
         <div class="mt-4 col-12 mb-3">
-          <h3 class="hr"><span>Why Choose Vox?</span></h3>
+          <h3 class="hr"><span>Why Choose VOX?</span></h3>
         </div>
       </div>
       <div class="row">
@@ -158,7 +158,7 @@
             <iframe class="video" src="https://www.youtube.com/embed/MbvtjK7nkW4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <h5 class="mt-3">Unique Consultative Approach</h5>
-          <p class="mb-4">We use our proprietary Vox Lifecycle consultative framework to find the right technology fit for your unique business needs and desired outcomes.</p>
+          <p class="mb-4">We use our proprietary VOX Lifecycle consultative framework to find the right technology fit for your unique business needs and desired outcomes.</p>
         </div>
         <div class="col-lg-4">
           <img src="img/business.jpg" alt="" style="width:100%">
@@ -179,8 +179,8 @@
       <div class="row">
         <div class="col-md-8 col-sm-12">
           <h3 class="light mb-4">What Our Customers Say About&nbsp;Us</h3>
-          <p>“Cindy from Vox spent 80+ hours working directly with my team and customers to ensure the Unified Communications team at UCSF continues to provide the level of support our customers have become accustomed to even during the overwhelming COVID-19 surge … Cindy’s contributions during this time of need have been acknowledged as high up as our IT CIO, and she will be included as part of the team for any recognition received in the future. Thank you, thank you, thank you … Vox is lucky to have Cindy on their team!” —Ian Gwinn, UCSF</p>
-          <p class="mt-5"><button type="submit" class="btn btn-warning">Talk to a Vox Expert Today!</button></p>
+          <p>“Cindy from VOX spent 80+ hours working directly with my team and customers to ensure the Unified Communications team at UCSF continues to provide the level of support our customers have become accustomed to even during the overwhelming COVID-19 surge … Cindy’s contributions during this time of need have been acknowledged as high up as our IT CIO, and she will be included as part of the team for any recognition received in the future. Thank you, thank you, thank you … VOX is lucky to have Cindy on their team!” —Ian Gwinn, UCSF</p>
+          <p class="mt-5"><button type="submit" class="btn btn-warning">Talk to a VOX Expert Today!</button></p>
         </div>
       </div>
     </div>
